@@ -70,7 +70,7 @@ use Exporter::Tidy
   };
 
 our @ISA     = 'DBI';
-our $VERSION = '0.0.21_1';
+our $VERSION = '0.0.20';
 
 sub _ejoin {
     my $joiner = shift;
@@ -585,7 +585,7 @@ sub arrays {
     return unless $self->{Active};
 
     my $all = $self->fetchall_arrayref || return;
-
+    return unless @$all;
     return @$all if wantarray;
     return $all;
 }
